# hack-and-play

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: build-api-image.yaml  build-web-image.yaml  test.yaml.yml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 357c998aaf00_init.py  360fb2fa1e6f_districts.py  ee276b14f2da_init.py
backend/fixtures/: districts.json
backend/src/: config.py  db.py  helpers.py
backend/src/models/: __init__.py  base.py  classification.py  digital_noise.py  district.py  district_aggregate.py  district_rhythm.py  enums.py  green_places.py  indicator.py  life_balance.py  metrics.py  safety.py  social_availability.py  social_life.py
backend/src/routes/: district.py
backend/src/schemas/: classification.py  district.py  metric.py
envs/backend/: db.env  db.env-default
frontend/: Dockerfile  docker-compose.yaml  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: optimize-images.mjs
frontend/src/: App.css  App.tsx  index.css
infra/agrocd/: .gitignore  .terraform.lock.hcl  main.tf  providers.tf  variables.tf
infra/aks/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
infra/ghselfrunner/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
infra/ingress/: .terraform.lock.hcl  main.tf  providers.tf  variables.tf
notebooks/cleardata/: divide_district.ipynb  extract_data.ipynb  extract_localization.ipynb  extract_only_warsaw.ipynb
notebooks/indicators/: city_traffic.ipynb  (+8 more)
(+30 files in other folders)
